# person-tracking

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements-locateanything.txt  requirements.txt
engine/: __init__.py  __main__.py  config.py  pipeline.py  run.py  types.py
engine/behaviour/: __init__.py  engine.py  features.py  rules.py
engine/core/: __init__.py  exceptions.py  logging.py  settings.py
engine/detection/: __init__.py  filters.py  locateanything.py  schemas.py  service.py  video.py
engine/export/: __init__.py  csv_exporter.py  json_exporter.py  xlsx_exporter.py
engine/features/: __init__.py  kinematics.py  schemas.py
engine/pose/: __init__.py  keypoints.py  service.py
engine/qa/: __init__.py  validators.py
engine/render/: __init__.py  annotator.py
engine/timeline/: __init__.py  generator.py
engine/tracking/: __init__.py  adapters.py  bytetrack.py  quality.py  schemas.py  service.py
scripts/: colab_compare.sh  colab_setup.sh  compare_detection_models.py  download_locateanything.py  download_models.py
tests/timeline_engine/: test_annotator.py  test_behaviour.py  test_behaviour_features.py  test_exporters.py  test_locateanything.py  test_pipeline.py  test_qa.py  test_timeline.py
