[project]
name = "person-behaviour-timeline"
version = "0.2.0"
description = "Person behaviour timeline engine from CCTV video"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests/timeline_engine"]
